# NeuralNetworks

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cnnmodel.html  index.md  pyproject.toml  requirements.txt  setup_neural_network.py
.devcontainer/: devcontainer.json  requirements.txt
.github/: SECURITY.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: REQUIREMENTS.md  cnnmodel.html  index.md  outline.md  requirements.md  tree.html  word_meanings.md
notebooks/: cnn_model.ipynb
src/: setup_nn.py
src/.conf/: requirements.txt
src/cli/: create_dev_env.sh  create_dev_env2.sh  create_dev_env3.sh  create_gitignore_python.sh
src/pipeline/: knn_clustering.py  mnist_keras_model.py  overview.ipynb  rnn.py  rnn_data_processing.py  trainer.py
src/python/: config.py  main.py
src/python/.conf/: requirements.txt
src/python/CNN/: cnn-inline.py  cnn.py  cnn1.py  cnn2.py  cnn3.py  cnn_example.py  cnn_model.py  cnn_skeleton.py  cnnmodel.py
src/python/RNN/: cnn_rnn_knn.py  cnn_rnn_knn_v2.py  input_output.py  input_output_v2.py  rnn.py  rnn2.py  rnn2knn.py  trainer.py
src/python/k-NN/: k_nn.py
src/python/kNN/: knn.py  knn_example.py  knn_main.py
src/python/models/: cnn.py  data_preparation.py  knn.py  rnn.py
src/python/visualization/: cnnmodel.py  viz.py
src/tests/: test_cnn.py  test_knn.py
